provarAnt/00D1b0000000d5bEAA/objects/SalesIQ__Account_Movement_Request__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Destination_PSTerritory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination PSTerritory</label>
        <referenceTo>SalesIQ__PSTerritory__c</referenceTo>
        <relationshipLabel>Account Movement Requests (Destination PSTerritory)</relationshipLabel>
        <relationshipName>Account_Movement_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Destination_Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Position</label>
        <referenceTo>SalesIQ__Position__c</referenceTo>
        <relationshipLabel>Account Movement Requests</relationshipLabel>
        <relationshipName>Account_Movement_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Destination_Territory__c</fullName>
        <label>Destination Territory</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Moved_Accounts__c</fullName>
        <label>Moved Accounts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>SalesIQ__Position__c</referenceTo>
        <relationshipLabel>Account Movement Requests (Position)</relationshipLabel>
        <relationshipName>Account_Movement_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request_Status__c</fullName>
        <formula>TEXT(SalesIQ__Request__r.SalesIQ__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request__c</fullName>
        <label>Request</label>
        <referenceTo>SalesIQ__Request__c</referenceTo>
        <relationshipLabel>Account Movement Requests</relationshipLabel>
        <relationshipName>Account_Movement_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Source_Territories__c</fullName>
        <label>Source Territories</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Movement Request</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AM-{000000}</displayFormat>
        <label>Account Movement Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Movement Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>